--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -1,10 +1,13 @@
+html{
+    font-size: clamp(16px, 4vw, 20px);
+    body{
+        font-family: 'Manrope', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    }
+}
+
 h1, h2, h3{
     margin: 0;
     font-family: 'Chillax-Light';
-}
-
-html{
-    font-size: clamp(16px, 4vw, 20px);
 }
 
 .title{
@@ -13,9 +16,6 @@ html{
 
 .introTitle{
     font-family: 'Chillax-Light';
-    span{
-        font-family: 'Chillax-Medium';
-    }
 }
 
 .description{
